[gd_scene load_steps=5 format=3 uid="uid://bv2g21feowrn3"]

[ext_resource type="Theme" path="res://resources/themes/base.tres" id="1_cgph1"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_pr8ck"]
[ext_resource type="PackedScene" uid="uid://c6d2kxsd2345a" path="res://scenes/menus/switch_scene_button.tscn" id="3_pas0a"]
[ext_resource type="PackedScene" uid="uid://bhjesns7d06ff" path="res://scenes/menus/main_menu.tscn" id="4_q3d4t"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cgph1")
script = ExtResource("1_pr8ck")

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="Menu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 217.0
grow_horizontal = 2

[node name="StatusLabel" type="RichTextLabel" parent="Menu"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 25.0
offset_top = 24.0
offset_right = 1454.0
offset_bottom = 267.0
theme_override_font_sizes/normal_font_size = 180
theme_override_font_sizes/bold_font_size = 180
bbcode_enabled = true
text = "[b]Game Paused[/b]
"

[node name="LaunchButton" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -91.5
offset_right = 247.0
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 160
text = "LAUNCH"

[node name="ButtonsContainer" type="HBoxContainer" parent="Menu"]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -118.0
offset_right = 378.0
offset_bottom = -19.0
grow_vertical = 0
theme_override_constants/separation = 16
alignment = 2

[node name="RestartButton" type="Button" parent="Menu/ButtonsContainer"]
layout_mode = 2
text = "RESTART"

[node name="SwitchSceneButton" parent="Menu/ButtonsContainer" instance=ExtResource("3_pas0a")]
layout_mode = 2
text = "exit"
scene_select = ExtResource("4_q3d4t")

[node name="ControlsInfo" type="RichTextLabel" parent="Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -553.0
offset_top = 10.0
offset_right = 48.0
offset_bottom = 245.0
grow_horizontal = 0
bbcode_enabled = true
text = "Roll Plane: a/d
Throttle:   w
Free look:  Mouse2"

[node name="Crosshair" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Crosshair"]
layout_mode = 0
offset_left = 4.0
offset_top = 18.0
offset_right = 36.0
offset_bottom = 22.0

[node name="ColorRect2" type="ColorRect" parent="Crosshair"]
layout_mode = 0
offset_left = 18.0
offset_top = 4.0
offset_right = 22.0
offset_bottom = 36.0

[node name="Debug" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 285.0
offset_right = 10.0
offset_bottom = 285.0

[node name="DebugLabel" type="RichTextLabel" parent="Debug"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -2.0
offset_top = -53.0
offset_right = 538.0
offset_bottom = 398.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
text = "debug"

[node name="Speedometer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -66.0
offset_right = -20.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="SpeedometerLabel" type="RichTextLabel" parent="Speedometer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -116.0
offset_right = 312.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/bold_font_size = 200
bbcode_enabled = true
text = "[b]100[/b]"

[node name="Settings" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 2
offset_left = -445.0
offset_top = -99.0
offset_right = 27.0
offset_bottom = 41.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4

[node name="VBoxContainer" type="GridContainer" parent="Settings/MarginContainer"]
layout_mode = 2
columns = 2

[node name="SensLabel" type="RichTextLabel" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Sensitivity[/b]"

[node name="SensSpinBox" type="SpinBox" parent="Settings/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
max_value = 20.0
step = 0.1

[node name="InvertLabel" type="RichTextLabel" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Invert Mouse[/b]"

[node name="InvertCheckButton" type="CheckBox" parent="Settings/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32

[connection signal="button_up" from="Menu/LaunchButton" to="." method="_on_launch_button_button_up"]
[connection signal="button_up" from="Menu/ButtonsContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="value_changed" from="Settings/MarginContainer/VBoxContainer/SensSpinBox" to="." method="_on_sens_spin_box_value_changed"]
[connection signal="toggled" from="Settings/MarginContainer/VBoxContainer/InvertCheckButton" to="." method="_on_invert_check_button_toggled"]
